Drop separate fid column